# clixon

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG  CHANGELOG.md  CHANGELOG.txt  CONTRIBUTING.md  DEVELOP.md  LICENSE  LICENSE.md  Makefile.in  README  README.develop  README.doxygen  README.md  README_DEVELOP.md  README_NACM.md  ROADMAP.md  build_deb.sh  clicon.conf.cpp.cpp  clicon.mk.cpp  clixon.conf.cpp.cpp  clixon.mk.cpp  codecov.yml  config.guess  configure  configure.ac  develop.md  version.sh
.github/workflows/: ci.yml  coverage.yml
apps/: Makefile.in
apps/backend/: Makefile.in  backend_cache.c  backend_cache.h  backend_client.c  backend_client.h  backend_clixon_lib.c  backend_clixon_lib.h  backend_commit.c  backend_commit.h  backend_confirm.c  backend_failsafe.c  backend_failsafe.h  backend_get.c  backend_get.h  backend_handle.h  backend_lock.c  backend_lock.h  backend_main.c  backend_plugin.c  backend_plugin.h  backend_plugin_restconf.c  backend_plugin_restconf.h  backend_socket.c  backend_socket.h  backend_startup.c  backend_startup.h  backend_state.c  backend_state.h  clicon_backend.h  clicon_backend_handle.c  clicon_backend_handle.h  clicon_backend_transaction.c  clicon_backend_transaction.h  clixon_backend.h  clixon_backend_client.h  clixon_backend_commit.h  clixon_backend_handle.c  clixon_backend_handle.h  clixon_backend_plugin.h  clixon_backend_transaction.c  (+1 more)
apps/cli/: Makefile.in  cli_auto.c  cli_autocli.c  cli_autocli.h  cli_common.c  cli_common.h  cli_generate.c  cli_generate.h  cli_handle.c  cli_handle.h  cli_main.c  cli_pipe.c  cli_pipe.h  cli_plugin.c  cli_plugin.h  cli_show.c  clicon_cli.h  clicon_cli_api.h  clixon_cli.h  clixon_cli_api.h
apps/dbctrl/: Makefile.in  dbctrl_main.c
apps/grpc/: Makefile.in  README.md  grpc_gnmi.c  grpc_gnmi.h  grpc_main.c  grpc_nghttp2.c  grpc_nghttp2.h
apps/netconf/: Makefile.in  README.md  clicon_netconf.h  clixon_netconf.h  netconf_capabilities.c  netconf_capabilities.h  netconf_filter.c  netconf_filter.h  netconf_hello.c  netconf_hello.h  netconf_lib.c  netconf_lib.h  netconf_main.c  netconf_plugin.c  netconf_plugin.h  netconf_rpc.c  netconf_rpc.h  netconf_tls_main.c
apps/restconf/: Makefile.in  README  README.md  clixon_http1.c  clixon_http1.h  clixon_http1_parse.h  clixon_http1_parse.l  clixon_http1_parse.y  clixon_http_data.c  clixon_http_data.h  clixon_restconf.h  clixon_www_data.c  clixon_www_data.h  restconf_api.c  restconf_api.h  restconf_api_evhtp.c  restconf_api_fcgi.c  restconf_api_native.c  restconf_err.c  restconf_err.h  restconf_evhtp.c  restconf_evhtp.h  restconf_evhtp_main.c  restconf_fcgi_lib.c  restconf_fcgi_lib.h  restconf_fcgi_main.c  restconf_handle.c  restconf_handle.h  restconf_http1.c  restconf_http1.h  restconf_lib.c  restconf_lib.h  restconf_libhttp_main.c  restconf_main.c  restconf_main_evhtp.c  restconf_main_fcgi.c  restconf_main_native.c  restconf_methods.c  restconf_methods.h  restconf_methods_get.c  (+16 more)
apps/snmp/: Makefile.in  README.md  clixon_snmp  snmp_handler.c  snmp_handler.h  snmp_lib.c  snmp_lib.h  snmp_main.c  snmp_mib_yang.c  snmp_mib_yang.h  snmp_register.c  snmp_stream.c  (+2 more)
autom4te.cache/: output.0  requests  traces.0
datastore/: Makefile.in  README.md  clixon_xmldb_text.c  clixon_xmldb_text.h  datastore_client.c
debian/: clixon7.install  control  libclixon-dev.install  rules
doc/: CLI.md  DEVELOP.md  Doxyfile  Doxyfile.graphs  FAQ.md  FAQ.txt  INSTALL.md  LINKS.md  Makefile.in  README.md  ROADMAP.md  clixon_example_sdk.odg  large-lists.md  startup.md
docker/: Dockerfile  Dockerfile.in  Makefile.in  README  README.md
etc/: Makefile.in  README  cliconrc.in  clixonrc.in
example/: Dockerfile  Makefile.in  README  README.md  clixon-example@2019-01-13.yang  example.xml  example.yang  example_backend.c  example_backend_nacm.c  example_backend_secondary.c  example_cli.c  example_cli.cli  example_netconf.c  example_restconf.c  ietf-interfaces@2014-05-08.yang  ietf-ip@2014-06-16.yang  ietf-ipsec@2016-03-09.yang  ietf-ipv4-unicast-routing@2014-10-26.yang  ietf-ipv6-unicast-routing@2014-10-26.yang  ietf-routing@2014-10-26.yang  routing.conf.local  routing.xml  routing_backend.c  routing_cli.c  routing_cli.cli  routing_netconf.c  routing_restconf.c
fuzz/: README.md
include/: Makefile.in  clicon_config.h.in  clicon_custom.h  clixon_config.h.in  clixon_config.h.in.in  clixon_config.h.in~  clixon_config.h~  clixon_custom.h
lib/: Makefile.in
scripts/: build_deb.sh  mib_to_yang.sh  version.sh
test/: Jenkinsfile  Makefile.in  README  README.md  all.sh  certs.sh  clixon  clixon.supp  config.sh.in  example.sh  example_module.sh  example_social.sh  interfaces.sh  jukebox.sh  lib.sh  long.sh  mem.sh  nacm.sh  plot_perf.sh  restconf_config.sh  restconfig.sh  site.sh  sum.sh  test1.sh  test2.sh  test3.sh  test4.sh  test5.sh  test6.sh  test7.sh  test_api.sh  test_api_path.sh  test_augment.sh  test_augment.yang  test_augment_default.sh  test_augment_if_feature.sh  test_augment_state.sh  test_augment_trans.sh  test_auth.sh  test_auth_ext.sh  (+280 more)
tests/: test_invariant_clixon_string.py
util/: Makefile.in  README.md  clixon_netconf_ssh_callhome.c  clixon_netconf_ssh_callhome_client.c  clixon_restconf_callhome_client.c  clixon_util_datastore.c  clixon_util_dispatcher  clixon_util_dispatcher.c  clixon_util_grpc.c  clixon_util_insert.c  clixon_util_json.c  clixon_util_netconf_ssh_callhome.c  clixon_util_path.c  clixon_util_regexp.c  clixon_util_socket.c  clixon_util_ssl.c  clixon_util_stream.c  clixon_util_text_syntax.c  clixon_util_tls_client.c  clixon_util_validate.c  clixon_util_xml.c  clixon_util_xml_mod.c  clixon_util_xpath.c  clixon_util_yang.c
yang/: Makefile.in  README.md  clixon-config@2017-07-02.yang  clixon-config@2017-12-03.yang  clixon-config@2017-12-27.yang  clixon-config@2018-02-12.yang  clixon-config@2018-04-30.yang  clixon-config@2018-10-21.yang  ietf-inet-types@2013-07-15.yang  ietf-netconf-acm@2012-02-22.yang  ietf-netconf-monitoring@2010-10-04.yang  ietf-netconf-notification@2008-07-01.yang  ietf-restconf-monitoring@2017-01-26.yang  ietf-restconf@2017-01-26.yang
(+509 files in other folders)
